tests/ui/closures/issue-6801.stderr
error[E0277]: cannot multiply `usize` by `Box<usize>`
  --> $DIR/issue-6801.rs:18:25
   |
LL |       let sq =  || { *x * *x };
   |                         ^ no implementation for `usize * Box<usize>`
   |
   = help: the trait `Mul<Box<usize>>` is not implemented for `usize`
help: consider dereferencing here
   |
LL |       let sq =  || { *x * **x };
   |                            +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
